--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 </head>
 
   <body>
-  	
+    <div class="row">
+        <div id="buttons"></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4" id="gifs"></div>
+        <div class="col-md-8 input">
+            <div>Click here to add a color!</div>
+            
+        </div>
+    </div>
         
 
 
