--- a/index.html
+++ b/index.html
@@ -2,28 +2,47 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>GifTastic: Vaporwave</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">>
+    <title>Amanda's GifTastic</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
   <body>
+
+
     <div class="row">
-        <div id="buttons"></div>
+
+        <div id="buttons"> </div>
+
     </div>
 
     <div class="row">
-        <div class="col-md-4" id="gifs"></div>
-        <div class="col-md-8 input">
-            <div>Click here to add a color!</div>
+
+
+        <div class="col-md-9" id="gifs"></div>
+        <div class="col-md-3 input">
+
+
+            <div>Click here to add YOUR favorite things:</div>
+
+            <input type="text" id="user-input"><br>
+
+
+            <input type="submit" id="add-flower" value="HERE">
             
         </div>
+
+
+
     </div>
         
 
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
+
+
+
+    <script type="text/javascript" src="app.js"></script>
 
   </body>
 </html>
